--- a/VassiatShahid.html
+++ b/VassiatShahid.html
@@ -161,7 +161,7 @@
   <!-- بخش اصلی -->
   <div class="container" id="main-content" style="display:none;">
     <div class="image-box">
-      <img id="vasiat-img" src="https://raw.githubusercontent.com/AloneProgrammer-tech/YadmaneShahid/main/vassiatshahidimage/vasiat.jpg" alt="وصیت شهید">
+      <img id="vasiat-img" src="https://s34.picofile.com/file/8488275942/vasiat.jpg" alt="وصیت شهید">
     </div>
 
     <div class="buttons">
