--- a/ShahidNooriBotons.html
+++ b/ShahidNooriBotons.html
@@ -66,7 +66,7 @@
   <button class="btn quran" onclick="window.open('https://www.delgarm.com/quran/','_blank')">قرآن آنلاین</button>
   <button class="btn mafatih" onclick="window.open('https://old.aviny.com/mafatih/index.aspx','_blank')">مفاتیح آنلاین</button>
 
-  <button class="btn ashura" onclick="window.open('https://edge72.517821.ir.cdn.ir/download/ziarat_ashora/ziarat_ashora_Farahmand_www.Ashora.ir.mp3','_blank')">زیارت عاشورا</button>
+  <button class="btn ashura" onclick="window.open('https://files.namnak.com/aup/202004/224.mp3','_blank')">زیارت عاشورا</button>
   <button class="btn martyrs" onclick="window.open('https://navideshahed.com/files/fa/news/1398/12/27/495040_186.mp3','_blank')">زیارت شهدا</button>
   <button class="btn madahi" onclick="window.open('https://aloneprogrammer-tech.github.io/YadmaneShahid/Madddahi.html','_blank')">مداحی</button>
   <button class="btn note" onclick="window.open('https://shohada21.blogsky.com/1404/08/15/post-4/','_blank')">ثبت دلنوشته</button>
