--- a/VassiatShahid.html
+++ b/VassiatShahid.html
@@ -185,7 +185,7 @@
 
   <!-- موزیک -->
   <audio id="bg-music" loop autoplay>
-    <source src="https://cdn.manzoom.ir/media/audio_files/20._Ultimate.flac" type="audio/flac">
+    <source src="https://s34.picofile.com/file/8488276368/Habib_Khazaeifar_Istadeh_Dar_Ghobar.mp3.html" type="audio/flac">
   </audio>
 
   <script>
