--- a/VassiatShahid.html
+++ b/VassiatShahid.html
@@ -185,7 +185,7 @@
 
   <!-- موزیک -->
   <audio id="bg-music" loop autoplay>
-    <source src="https://s34.picofile.com/file/8488276368/Habib_Khazaeifar_Istadeh_Dar_Ghobar.mp3.html" type="audio/flac">
+    <source src="https://s34.picofile.com/d/8488276368/a2a05609-9f57-4d9c-bebd-5f7d7bfad436/Habib_Khazaeifar_Istadeh_Dar_Ghobar.mp3" type="audio/flac">
   </audio>
 
   <script>
