--- a/VassiatShahid.html
+++ b/VassiatShahid.html
@@ -173,7 +173,7 @@
     <div class="footer">طراحی شده با احترام و یاد شهدا 🌹</div>
   </div><!-- موزیک (بدون autoplay) -->
   <audio id="bg-music" loop>
-    <source src="https://s34.picofile.com/d/8488276368/a2a05609-9f57-4d9c-bebd-5f7d7bfad436/Habib_Khazaeifar_Istadeh_Dar_Ghobar.mp3" type="audio/mp3">
+    <source src="https://raw.githubusercontent.com/aloneprogrammer-tech/YadmaneShahid/main/assets/Music.mp3" type="audio/mp3">
   </audio>
 
   <script>
