--- a/VassiatShahid.html
+++ b/VassiatShahid.html
@@ -173,7 +173,7 @@
     <div class="footer">طراحی شده با احترام و یاد شهدا 🌹</div>
   </div><!-- موزیک (بدون autoplay) -->
   <audio id="bg-music" loop>
-    <source src="https://raw.githubusercontent.com/aloneprogrammer-tech/YadmaneShahid/main/assets/Music.mp3" type="audio/mp3">
+    <source src="https://dl.musicema.com/music/Zother/Habib%20Khazaeifar%20-%20Istadeh%20Dar%20Ghobar.mp3" type="audio/mp3">
   </audio>
 
   <script>
