--- a/Madddahi.html
+++ b/Madddahi.html
@@ -38,7 +38,7 @@ audio {
 <div class="song">
   <p>مداحی اول: مهدی رسولی - الرّحیل</p>
   <audio controls>
-    <source src="https://upmusics.musitraf.com/99/Mehdi%20Rasooli%20%7C%20Al%20Rahil%20%20(320).mp3?src=upmusics" type="audio/mpeg">
+    <source src="https://dl.tabamusic.com/Madahi/Mehdi%20Rasoli%20-%20Alrahil%20Alrahil.mp3" type="audio/mpeg">
     مرورگر شما از پخش صوت پشتیبانی نمی‌کند.
   </audio>
 </div>
